--- a/image vol.html
+++ b/image vol.html
@@ -15,7 +15,7 @@
 
    <div class="craft-list">
       <div class="craft-item">
-        <img src="image/vol.png" alt="vol">
+        <img src="image/vol.PNG" alt="vol">
         <span>vol</span>
        </div>
 	   </div>
