--- a/image hotel.html
+++ b/image hotel.html
@@ -18,15 +18,15 @@
     </h2>
       <div class="craft-list">
       <div class="craft-item">
-        <img src="image/prix réel.png" alt="prix réel" />
+        <img src="image/prix réel.PNG" alt="prix réel" />
         <span>prix réel</span>
       </div>
       <div class="craft-item">
-        <img src="image/prix total.png" alt="prix total" />
+        <img src="image/prix total.PNG" alt="prix total" />
         <span>prix total</span>
       </div>
       <div class="craft-item">
-        <img src="image/prix.png" alt="prix" />
+        <img src="image/prix.PNG" alt="prix" />
         <span>prix</span>
       </div>
     </div>
